BZ-10365 make sure our buttons wrap

--- a/src/app/third-iron-module/third-iron-buttons/third-iron-buttons.component.scss
+++ b/src/app/third-iron-module/third-iron-buttons/third-iron-buttons.component.scss
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  flex-wrap: wrap;
 
   .ti-browzine-button-with-stack {
     margin-left: 10px;
@@ -16,6 +17,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .ti-consolidated-coverage {
